--- a/example/index.html
+++ b/example/index.html
@@ -13,11 +13,31 @@
 </head>
 <body>
 
-<ul id="pagination-1" ></ul>
+<div>
+    <ul id="pagination-1"></ul>
+</div>
+
+<div>
+    <ul id="pagination-2"></ul>
+</div>
 
 
 
 <script>
+    $('#pagination-1').twbsPagination({
+        totalPages: 35,
+        visiblePages: 5,
+    });
+    $('#pagination-2').twbsPagination({
+        totalPages: 35,
+        visiblePages: 5,
+        first:  false,
+        prev : '上一页',
+        next :'下一页',
+        last :false,
+        ellipsis :false,
+    });
+
 
 </script>
 
