--- a/example/index.html
+++ b/example/index.html
@@ -27,6 +27,8 @@
     $('#pagination-1').twbsPagination({
         totalPages: 35,
         visiblePages: 5,
+//        href: '#page={{pageNumber}}&c=d',
+//        hrefVariable: '{{pageNumber}}',
     });
     $('#pagination-2').twbsPagination({
         totalPages: 35,
@@ -36,6 +38,8 @@
         next :'下一页',
         last :false,
         ellipsis :false,
+//        href: '#page={{pageNumber}}&c=d',
+//        hrefVariable: '{{pageNumber}}',
     });
 
 
