--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,7 @@
 <body>
 
 <div>
-    <ul id="pagination-1"></ul>
+    <div id="pagination-1"></div>
 </div>
 
 <div>
@@ -38,6 +38,7 @@
         next :'下一页',
         last :false,
         ellipsis :false,
+        paginationControl:false
 //        href: '#page={{pageNumber}}&c=d',
 //        hrefVariable: '{{pageNumber}}',
     });
