--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
     <script src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
     <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.js"></script>
 
-    <script src="../jquery.twbsPagination.js" type="text/javascript"></script>
+    <script src="../jquery.hb.twbsPagination.js" type="text/javascript"></script>
 
 </head>
 <body>
