--- a/example/index.html
+++ b/example/index.html
@@ -27,8 +27,8 @@
     $('#pagination-1').twbsPagination({
         totalPages: 35,
         visiblePages: 5,
-//        href: '#page={{pageNumber}}&c=d',
-//        hrefVariable: '{{pageNumber}}',
+        href: '#page={{pageNumber}}&c=d',
+        hrefVariable: '{{pageNumber}}',
     });
     $('#pagination-2').twbsPagination({
         totalPages: 35,
