--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body data-spy="scroll" data-target="#navigation">
 <header>
     <div class="inner">
-        <h1>jQuery Pagination plugin</h1>
+        <h1>jQuery Pagination plugins</h1>
 
         <h2>Optimized for bootstrap</h2>
         <a href="https://github.com/esimakin/twbs-pagination" class="button">
