--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         support all option from  original twbsPagination<br>
 
         original <a href="http://esimakin.github.io/twbs-pagination/">doc</a>
+         <a href="http://ashley2014.github.io/twbs-pagination/">demo</a>
     </p>
 
 <pre>
