--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         add option ellipsis add option paginationControl <br>
         support all option from  original twbsPagination<br>
 
-        original <a href="http://esimakin.github.io/twbs-pagination/">doc</a>
-         <a href="http://ashley2014.github.io/twbs-pagination/">demo</a>
+        original <a href="http://esimakin.github.io/twbs-pagination/">doc</a> <br>
+         <a href="http://ashley2014.github.io/twbs-pagination/">this demo</a>
     </p>
 
 <pre>
